# chat

./: .gitignore  Cargo.toml  chat_input.text
src/: main.rs  tokenizer.rs  training_data.rs  version_helper.rs  vocabulary.rs
src/nn/: backward.rs  chat.rs  forward.rs  gradients.rs  load.rs  mod.rs  predict.rs  save.rs  train.rs
src/rnn/: backward.rs  build.rs  forward.rs  gradients.rs  load.rs  mod.rs  save.rs  train.rs
