[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
ndarray = { version = "0.15", features = ["serde", "blas"] }
ndarray-rand = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
rayon = "1"
blas-src = { version = "0.8", features = ["accelerate"] }
chrono = "0.4.44"